--- a/pw4/public/index.html
+++ b/pw4/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hospital Management System</title>
-  <link rel="stylesheet" href="../frontEnd/src/index.css">
+  <link rel="stylesheet" href="../src/index.css">
 </head>
 <body>
 <div id="root"></div>
